admission/ValidatingAdmissionPolicy/policies/startupprobe-tcpsocket-host/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: startupprobe-tcpsocket-host-containers
  annotations:
    kubeapt.io/uuid: "1a8a155a-af40-4718-bf9e-0941fafe0da0"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    startupProbe:
      tcpSocket:
        port: 80
        host: 127.0.0.1
